ask me on twitter

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="wrapper">
       <header>
         <h1 class="header">Tdd by example</h1>
-        <p class="header"></p>
+        <p class="header">Would you like a blog about a specific theme, ask me and I'll try: [@ericminio](http://twitter.com/ericminio)</p>
 
       </header>
       <section>
