ask me link moved in section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="wrapper">
       <header>
         <h1 class="header">Tdd by example</h1>
-        <p class="header">Would you like a blog about a specific theme, ask me and I'll try: [@ericminio](http://twitter.com/ericminio)</p>
+        <p class="header"></p>
 
       </header>
       <section>
@@ -25,6 +25,8 @@
 <a id="welcome-" class="anchor" href="#welcome-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome :)</h3>
 
 <p>My intention here is to share how Test-Driven development help me in my work.</p>
+
+<p>Would you like a blog/example about a specific challenge you have? Ask me and I'll try: <a href="http://twitter.com/ericminio">@ericminio</a></a></p>
       </section>
       
     </div>
